<resources>
    <string name="app_name">Desichain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bookand_media">Book &amp; Media</string>
    <string name="title_activity_poojaitems">Pooja Items</string>
    <string name="title_activity_healthand_food">Health &amp; Food</string>
    <string name="title_activity_others">Others</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_my_reviews">My Reviews</string>
    <string name="title_activity_my_orders">My Orders</string>
    <string name="title_activity_my_cart">MyCart</string>
    <string name="title_activity_help_centre">Help Centre</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="nav_legal">Legal</string>
    <string name="nav_policy">Policy</string>
    <string name="returnPolicy">Return Policy</string>
    <string name="about_us">About Us</string>
    <string name="shipping">Shipping Policy</string>
    <string name="state">Select your state</string>
    <string name="skipSignIn"><u>Skip>></u>.</string>
    <string name="ques2">Q. What all items can I return?</string>
    <string name="ques3">Q. When are returns and refund not possible?</string>
    <string name="ques4">Q. Do I have to return a free gift when I return the product?</string>
    <string name="ques5">Q. Can a part of order be returned?</string>
    <string name="ques6">Q. When are refunds provided?</string>
    <string name="ques7">Q. How do I get my refund (cash or NEFT transfer)?</string>
    <string name="ques8">Q. Will my problem be addressed?</string>
    <string name="ques1">Q. How can I return an item purchased on Desichain?</string>
    <string name="ans1">Place a return request online conveniently if your product is damaged, tampered, defective, not as described state. The product can be replaced only based on valid reasons. You can write an email to us within 10 days of the delivery of the product regarding your product returns at: orders@desichain.in   \nBuyer has to bear all expenses for returning. Please ensure that you pack the Order securely and send it back to us through Regular Postal Service or a reliable Courier Service. Desichain is not responsible for any kind of in-transit damages, while the product has been shipped by the customer. A customer is solely responsible for the damage claim from courier company after he dispatched to us.</string>
    <string name="ans2">You can change any sealed product (after a ‘Return-acceptance’ mail from Desichain) that has not been opened and is left as it is. Please ensure that the product is in original condition from the packaging to the price tags, labels, freebies, accessories and original packaging. However, we don’t allow returns merely on not liking the product as most products are daily consumable product. Kindly refer next point for more details.</string>
    <string name="ans3">Certain situations wherein it is difficult for the returns/ refund to take place are listed below:   \n1) If the product is tampered or seal is opened and used.   \n\n2) If the return request is made after the specific time frame.   \n\n3) If the product is damaged due to use (or normal wear and tear) or product is not in the same condition as you received it. Any negligence on customer’s part is not acceptable.   \n\n4) If product is tampered or missing serial numbers in our inspection of the Images/ Videos sent by customer to our Quality Analysts.\n\n5) If anything is missing from the package including price tag, labels, accessories and outer packaging.   \n\n6) Food Items and Clothing don’t fall in our return policy.</string>
    <string name="ans4">Yes. The free gift is a part of the placed order. Hence, it is required to be returned with the originally delivered order.</string>
    <string name="ans5">Yeah, a part means an \'Individual Item’, and not a part/ accessories of that particular item.   \nFor eg: Drops returned without dropper aren’t acceptable as dropper is an accessory. Only a complete Item can be returned. And not parts of the items.   \nBut if you have placed an order for multiple items, and have complain with any one particular item of the order, you can apply request for the return of the same.</string>
    <string name="ans6">We work to provide you a hassle free shopping experience. Refunds are issued when (after inspection):   \n\n1) We cannot provide replacement.   \n\n2) When the product is damaged or missing.   \n\n3) Only after return delivery of the product(s) at our office address.   \nThe Refund would be issued in 10-15 days and should reflect in your Bank account in next 4-7 working days per your individual Bank’s procedure. \nWe don’t provide return of shipping charges.</string>
    <string name="ans7">If you have paid by Credit/ Debit/ Net banking/ PayTm/ Mobikwik, then it could be refunded without requiring any bank information from your end.   \nIf you paid by Cash On Delivery (COD)/ Cash and Cheque deposit/ NEFT etc, you would need to share your bank details with us.</string>
    <string name="ans8">Yes, We at DesiChain strive hard to give an excellent shopping experience to our customers.   \nYour problem will be understood and required procedure will follow within 48 hours of the complaint.</string>
    <string name="dispute">\nAny dispute is subject to Delhi Jurisdiction.</string>
    <string name="aboutus"><u>About Us</u></string>
    <string name="customer_service">Customer Service</string>
    <string name="policy_label">Policy</string>
    <string name="Rs">\u20B9</string>
    <string name="nav_return_policy">Return Policy</string>
    <string name="nav_shipping_policy">Shipping Policy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_payment">Payment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_my_account">My Account</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
</resources>