<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReturnPolicy">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        style="@style/PolicyQuestions"

        android:textSize="23sp"

        android:text="@string/ques1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="12sp"
        android:layout_weight="2"
        android:id="@+id/ques1_return_policy"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="#C0C0C0"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/PolicyQuestions"
        android:text="@string/ques2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="12sp"
        android:layout_weight="2"
        android:id="@+id/ques2_return_policy"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="#C0C0C0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/PolicyQuestions"
            android:text="@string/ques3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="12sp"
            android:layout_weight="2"
            android:id="@+id/ques3_return_policy"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="#C0C0C0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/PolicyQuestions"
            android:text="@string/ques4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="12sp"
            android:layout_weight="2"
            android:id="@+id/ques4_return_policy"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="#C0C0C0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/PolicyQuestions"
            android:text="@string/ques5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="12sp"
            android:layout_weight="2"
            android:id="@+id/ques5_return_policy"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="#C0C0C0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/PolicyQuestions"
            android:text="@string/ques6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:textSize="12sp"
            android:id="@+id/ques6_return_policy"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="#C0C0C0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/PolicyQuestions"
            android:text="@string/ques7" />

        <TextView
            android:layout_width="match_parent"
            android:textSize="12sp"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:id="@+id/ques7_return_policy"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="#C0C0C0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"

            style="@style/PolicyQuestions"

            android:layout_weight="1"
            android:text="@string/ques8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="12sp"
            android:layout_weight="2"
            android:id="@+id/ques8_return_policy"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="#C0C0C0"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            style="@style/PolicyQuestions"
            android:text="@string/dispute"/>
    </LinearLayout>
</ScrollView>
