<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nitin.desichain.Policy">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/side_nav_bar">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/myToolBar"/>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

    <ScrollView
        android:layout_width="match_parent"
        android:paddingStart="5dp"
        android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clickable="true"
                android:id="@+id/customerService"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:textColor="@android:color/black"
                        android:text="@string/customer_service"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/imgCustomerService"
                        android:layout_weight="1"
                        android:src="@mipmap/ic_add_black_24dp" />
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/fragment_customer_Service"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#C0C0C0"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:clickable="true"
                android:id="@+id/shipping_policy"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:textColor="@android:color/black"
                        android:text="@string/nav_shipping_policy"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/imgShippingPolicy"
                        android:src="@mipmap/ic_add_black_24dp" />
                </LinearLayout>
                <FrameLayout
                    android:id="@+id/shippingfragment"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#C0C0C0"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:clickable="true"
                android:id="@+id/return_policy"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:id="@+id/rpt"
                        android:textColor="@android:color/black"
                        android:text="@string/nav_return_policy"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/imgReturnPolicy"
                        android:src="@mipmap/ic_add_black_24dp" />

                </LinearLayout>

                <FrameLayout
                    android:id="@+id/fragment_return_policy"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#C0C0C0"/></LinearLayout>

    </FrameLayout>
    </ScrollView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>

