<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:paddingStart="5dp"
        android:layout_height="match_parent"
        android:paddingLeft="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:id="@+id/customerService"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:textColor="@android:color/black"
                            android:text="@string/customer_service"
                            android:textSize="16sp" />

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:id="@+id/imgCustomerService"
                            android:layout_weight="1"
                            android:src="@mipmap/ic_add_black_24dp" />
                    </LinearLayout>

                    <FrameLayout
                        android:id="@+id/fragment_customer_Service"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="4" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#C0C0C0"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:clickable="true"
                    android:id="@+id/shipping_policy"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:textColor="@android:color/black"
                            android:text="@string/nav_shipping_policy"
                            android:textSize="16sp" />

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:id="@+id/imgShippingPolicy"
                            android:src="@mipmap/ic_add_black_24dp" />
                    </LinearLayout>
                    <FrameLayout
                        android:id="@+id/shippingfragment"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="4" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#C0C0C0"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:clickable="true"
                    android:id="@+id/return_policy"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:id="@+id/rpt"
                            android:textColor="@android:color/black"
                            android:text="@string/nav_return_policy"
                            android:textSize="16sp" />

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:id="@+id/imgReturnPolicy"
                            android:src="@mipmap/ic_add_black_24dp" />

                    </LinearLayout>

                    <FrameLayout
                        android:id="@+id/fragment_return_policy"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="4" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#C0C0C0"/></LinearLayout>

        </FrameLayout>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_weight="2">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <include layout="@layout/card_return_protection" />
                </FrameLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>